# KNN

./: Dt1.txt  ENNSmoothFilter.py  KNNClassifier.py  data.txt  iris.data.txt  main.py  pyproject.toml  sintetico.txt  utilities.py
