[tool.poetry]
name = "knn"
version = "0.1.0"
description = "KNN para la materia de tratamiento de la información"
authors = ["PoloBustillo <39663418+PoloBustillo@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
scikit-learn = "^1.4.1.post1"
matplotlib = "^3.8.3"
pandas = "^2.2.1"
plotly = "^5.20.0"
seaborn = "^0.13.2"
art = "^6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
